This is the CHANGELOG for amavisd-milter.

20060125:
	amavisd-milter-1.1.1

	Portability release. amavisd-milter-1.1 now can be compiled on
	FreeBSD, NetBSD, OpenBSD, Linux and Solaris.  Please report 
	success or problems on the users mailing list.

20060125:
	Linux and Solaris portability fix: sem_t is declared as pointer on
	*BSD but as structure on Linux and Solaris.

	Solaris portability fix: search sem_init in librt.

	Solaris portability fix: replace missing fts.h API.

20060124:
	amavisd-milter-1.1.0

	New features:
	- amavisd-milter can limit number of concurrent connections
	  to amavisd-new
	- amavisd-milter is responsible to remove message work
	  directory

20060124:
	README is now generated from amavisd-milter(8) manual page.

	Remove all files and directories in work directory because
	amavisd-new sometimes don't do it (e.q. when antivirus fail).

20060123:
	Limit maximum concurrent connections to amavisd:

	    amavisd-milter -m 4 -M 600

	means that there is limit to maximum 4 concurrent connections to
	amavisd and wait maximum 10 minutes (10*60 sec) for connection to
	amavisd.  When connection isn't available, amavisd-milter sleep for
	1 sec.  Every minute of waiting is sendmail triggered via
	smfi_progress.  When time limit run out then amvisd-milter return
	temporary fail.

20060113:
	amavisd-milter-1.0.4

	Bugfix release.  Added manual page amavisd-milter(8).

	INCOMPATIBILITY with 1.0.3 and previous version:

	Default working directory was changed from /var/amavis/tmp
	to /var/amavis to accordance with amavisd-new $helpers_home
	default value.  To go back to the previous behaviour run
	amavisd-milter with option -w /var/amavis/tmp

20060109:
	When stopping amavisd-new one (maybe not always just one) of milter
	threads amavisd-milter start to eat up a cpu time.
	Submitted by: Grzegorz Piszczek <grzegorz@piszczek.name>

	Fixed bug in mlfi_close(): amavisd-milter dies randomly due to
	segmentation fault.